--- a/comic-metrics/build.gradle
+++ b/comic-metrics/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 	// Spring Boot for dependency injection and configuration
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 
 	// Lombok
 	compileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
