--- a/comic-api/build.gradle
+++ b/comic-api/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id "jacoco"
 
 	id "com.coditory.integration-test" version '2.2.5'
-	id "io.spring.dependency-management" version '1.1.7'
-	id "org.springframework.boot" version '4.0.1'
+	id "io.spring.dependency-management"
+	id "org.springframework.boot"
 	id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
 }
 
@@ -39,9 +39,7 @@ configurations {
 	all*.exclude group: 'commons-logging', module: 'commons-logging'
 }
 
-repositories {
-	mavenCentral()
-}
+// repositories inherited from root build.gradle
 
 dependencies {
 	// Module dependencies
