--- a/comic-common/build.gradle
+++ b/comic-common/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "io.spring.dependency-management" version '1.1.7'
+	id "io.spring.dependency-management"
 	id "java-library"
 }
 
@@ -10,9 +10,7 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
-}
+// repositories inherited from root build.gradle
 
 dependencies {
 	// Gson for JSON serialization (used in DTOs)
