refactor: Standardize batch job execution tracking and logging with a new summary DTO and dedicated listener.

--- a/comic-engine/build.gradle
+++ b/comic-engine/build.gradle
@@ -64,4 +64,9 @@ dependencyManagement {
 
 tasks.withType(Test).configureEach {
 	useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+        showStandardStreams = true
+        exceptionFormat = 'full'
+    }
 }
