feat(backfill): Add source-specific rate limiting and fix inactive comic log noise
- Add BackfillSourceConfig DTO for source-specific constraints
- Add BackfillConfigurationService with @ConfigurationProperties support
- Enhance ComicBackfillService with:
  - Pre-filtering of inactive/invalid comics upfront
  - Source-specific maxPerDay rate limiting
  - Source-specific maxDaysBack history depth
  - Respect comic's oldest/newest date bounds
- Add downloadComicForDate method for efficient single-comic downloads
- Update backfillTaskProcessor to use targeted download instead of
  iterating all comics
- Update application.properties with source-specific config examples

This eliminates the redundant 'Skipping comic' log messages that
appeared 100+ times per backfill run for inactive comics.

--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -47,13 +47,25 @@ batch.metrics-update.fixed-delay=300000
 batch.record-purge.enabled=true
 batch.record-purge.cron=0 45 6 * * ?
 
-# Comic Backfill Job - Backfills missing comics for a specific year
+# Comic Backfill Job - Backfills missing comics
 batch.comic-backfill.enabled=true
 batch.comic-backfill.cron=0 0 7 * * ?
-batch.comic-backfill.target-year=2025
 batch.comic-backfill.chunk-size=10
 batch.comic-backfill.max-consecutive-failures=3
 batch.comic-backfill.delay-between-comics-ms=5000
+
+# Global defaults for backfill limits
+batch.comic-backfill.default-max-per-day=50
+batch.comic-backfill.default-max-days-back=365
+
+# Source-specific limits (override defaults)
+# GoComics - allows deeper history
+batch.comic-backfill.sources.gocomics.max-per-day=20
+batch.comic-backfill.sources.gocomics.max-days-back=730
+
+# Comics Kingdom - more limited history
+batch.comic-backfill.sources.comicskingdom.max-per-day=10
+batch.comic-backfill.sources.comicskingdom.max-days-back=180
 
 # Batch execution tracking - JSON file location
 batch.tracking.json-file=${comics.cache.location}/batch-executions.json
