--- a/comic-web/package.json
+++ b/comic-web/package.json
@@ -13,37 +13,36 @@
     "buildProd": "ng build --configuration production",
     "buildDev": "ng build --configuration development",
     "buildWatch": "ng build --watch=true",
-    "analyze": "ng build --stats-json && webpack-bundle-analyzer dist/comic-web/stats.json",
-    "prerender": "ng run comic-web:prerender"
+    "analyze": "ng build --stats-json && webpack-bundle-analyzer dist/comic-web/stats.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.15",
+    "@angular/animations": "^21.0.6",
     "@angular/cdk": "^20.2.14",
     "@angular/cdk-experimental": "^20.2.14",
-    "@angular/common": "^20.3.15",
-    "@angular/compiler": "^20.3.15",
-    "@angular/compiler-cli": "^20.3.15",
-    "@angular/core": "^20.3.15",
-    "@angular/forms": "^20.3.15",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/compiler-cli": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
     "@angular/material": "^20.2.14",
-    "@angular/platform-browser": "^20.3.15",
-    "@angular/platform-browser-dynamic": "^20.3.15",
-    "@angular/router": "^20.3.15",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/router": "^21.0.6",
     "core-js": "^3.42.0",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.13",
     "@angular-eslint/builder": "^19.0.0",
     "@angular-eslint/eslint-plugin": "^19.0.0",
     "@angular-eslint/eslint-plugin-template": "^19.0.0",
     "@angular-eslint/schematics": "^19.0.0",
     "@angular-eslint/template-parser": "^19.0.0",
-    "@angular/cli": "^20.3.13",
-    "@angular/language-service": "^20.3.15",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "^21.0.4",
+    "@angular/language-service": "^21.0.6",
     "@types/jasmine": "^5.1.8",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
@@ -58,7 +57,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.0",
+    "typescript": "~5.9.3",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
