--- a/comic-web/angular.json
+++ b/comic-web/angular.json
@@ -16,7 +16,9 @@
             "outputPath": "dist/comic-web",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "src/tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "assets": [
@@ -101,23 +103,10 @@
           }
         },
         "test": {
-          "builder": "@angular/build:karma",
+          "builder": "@angular/build:unit-test",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/theme.scss",
-              "src/styles.css"
-            ],
-            "scripts": [],
-            "assets": [
-              "src/favicon.svg",
-              "src/manifest.json",
-              "src/assets"
-            ]
+            "buildTarget": "comic-web:build:development"
           }
         },
         "lint": {
