--- a/comic-web/package.json
+++ b/comic-web/package.json
@@ -47,17 +47,14 @@
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^9.26.0",
     "jasmine-core": "^5.7.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
+    "jsdom": "^27.4.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
+    "vitest": "^4.0.16",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
