--- a/comic-web/angular.json
+++ b/comic-web/angular.json
@@ -16,9 +16,7 @@
             "outputPath": "dist/comic-web",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": [],
             "tsConfig": "src/tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "assets": [
