--- a/comic-web/package.json
+++ b/comic-web/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "test:headless": "ng test --browsers=ChromeHeadless --watch=false",
-    "test:ci": "ng test --browsers=ChromeHeadlessCI --watch=false --code-coverage",
+    "test:headless": "ng test --watch=false",
+    "test:ci": "ng test --watch=false --coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "buildProd": "ng build --configuration production",
