--- a/comic-web/package.json
+++ b/comic-web/package.json
@@ -6,60 +6,55 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "test:headless": "ng test --browsers=ChromeHeadless --watch=false",
-    "test:ci": "ng test --browsers=ChromeHeadlessCI --watch=false --code-coverage",
+    "test:headless": "ng test --watch=false",
+    "test:ci": "ng test --watch=false --coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "buildProd": "ng build --configuration production",
     "buildDev": "ng build --configuration development",
     "buildWatch": "ng build --watch=true",
-    "analyze": "ng build --stats-json && webpack-bundle-analyzer dist/comic-web/stats.json",
-    "prerender": "ng run comic-web:prerender"
+    "analyze": "ng build --stats-json && webpack-bundle-analyzer dist/comic-web/stats.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.0",
-    "@angular/cdk": "^19.2.0",
-    "@angular/cdk-experimental": "^19.2.0",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/compiler-cli": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/material": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/animations": "^21.0.6",
+    "@angular/cdk": "^21.0.5",
+    "@angular/cdk-experimental": "^21.0.5",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/compiler-cli": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/material": "^21.0.5",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/router": "^21.0.6",
     "core-js": "^3.42.0",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.0",
     "@angular-eslint/builder": "^19.0.0",
     "@angular-eslint/eslint-plugin": "^19.0.0",
     "@angular-eslint/eslint-plugin-template": "^19.0.0",
     "@angular-eslint/schematics": "^19.0.0",
     "@angular-eslint/template-parser": "^19.0.0",
-    "@angular/cli": "^19.2.0",
-    "@angular/language-service": "^19.2.0",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "^21.0.4",
+    "@angular/language-service": "^21.0.6",
     "@types/jasmine": "^5.1.8",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^9.26.0",
     "jasmine-core": "^5.7.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
+    "jsdom": "^27.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.0",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.16",
     "webpack-bundle-analyzer": "^4.10.2"
-  },
-  "packageManager": "yarn@3.2.1"
+  }
 }
