--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.profiles.active=production
 logging.level.web=INFO
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
 
+# Shorten stack traces - exclude framework noise, keep app code visible (max 50 lines)
+logging.exception-conversion-word=%wEx{50,org.springframework,org.apache,org.junit,org.gradle,java.lang.reflect,jdk.internal,sun.reflect,io.netty,worker.org.gradle}
+
 # OpenAPI Configuration
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
