--- a/comic-api/src/test/resources/application-test.properties
+++ b/comic-api/src/test/resources/application-test.properties
@@ -33,3 +33,6 @@ server.port=0
 logging.level.root=INFO
 logging.level.org.stapledon=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Shorten stack traces - exclude framework noise, keep app code visible (max 50 lines)
+logging.exception-conversion-word=%wEx{50,org.springframework,org.apache,org.junit,org.gradle,java.lang.reflect,jdk.internal,sun.reflect,io.netty,worker.org.gradle}
