refactor: eliminate MetricsUpdateJob in favor of event-driven persistence
- Delete MetricsUpdateJobConfig.java (no more Spring Batch job every 5 min)
- Add event-driven persistence to AccessMetricsCollector (persist after N accesses)
- Refactor MetricsUpdateService.buildCombinedMetrics() to return data on-demand
- Update JsonMetricsService.getCombinedMetrics() to compute instead of read file
- Remove MetricsUpdateJob from BatchJobBaseConfig, SchedulerTriggers, and configs
- Add comics.metrics.persist-threshold config (default: 50)

Benefits:
- Eliminates NFS writes every 5 minutes
- Combined metrics computed on-demand (~5ms for 45 comics)
- Better durability: lose at most 50 accesses on crash vs 5 min worth
- Ready for upcoming JWT-authenticated user-facing metrics

Closes: n/a

--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -42,10 +42,6 @@ batch.image-backfill.enabled=true
 batch.image-backfill.cron=0 30 6 * * ?
 batch.image-backfill.batch-size=100
 
-# Metrics Update Job - Updates metrics every 5 minutes
-batch.metrics-update.enabled=true
-batch.metrics-update.fixed-delay=300000
-
 # Retrieval Record Purge Job - Purges old retrieval records
 batch.record-purge.enabled=true
 batch.record-purge.cron=0 45 6 * * ?
@@ -93,6 +89,8 @@ jwt.refresh-expiration=86400000
 comics.metrics.color-detection.sample-percentage=5.0
 # Error tracking: Maximum number of errors to keep per comic in last_errors.json
 comics.metrics.error-tracking.max-errors-per-comic=5
+# Access metrics persistence: Number of accesses before persisting to disk (event-driven, replaces scheduled job)
+comics.metrics.persist-threshold=50
 
 # Caffeine Cache Configuration
 # Enable/disable Caffeine caching
